<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/auth_user_tv" />
    <EditText
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_et_hint"
        android:padding="16dp"
        android:background="@drawable/et_wrappers"
        android:drawableLeft="@drawable/account_circle"/>
    <EditText
        android:id="@+id/passwd_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_et_hint"
        android:padding="16dp"
        android:background="@drawable/et_wrappers"
        android:drawableLeft="@drawable/lock_icon"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_gravity="center_horizontal" >
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/sign_up_button_text"/>
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:text="@string/sign_in_button_text"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/oauth_text" />
    <Button
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_auth_button_text"
        android:textColor="@color/black"
        android:backgroundTint="@android:color/white"
        android:padding="16dp"
        android:drawableLeft="@drawable/ic_icons8_google"/>
</LinearLayout>
