<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar.AddCalendarEventActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvNameEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event" />

    <EditText
        android:id="@+id/editTextNameEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvEventHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hour" />

    <EditText
        android:id="@+id/editTextEventHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />


    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/butSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar" />




</LinearLayout>