<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TimeTable.InfoFragment">



    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipeLayout">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:stretchColumns="*"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                >

                <TextView
                    android:id="@+id/tNombre"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/asignatura"
                    android:textAlignment="center"
                    android:background="@drawable/back"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tHorario"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@drawable/back"
                    android:text="@string/hora"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tClase"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@drawable/back"
                    android:text="@string/aula"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:padding="5dp">

            </TableRow>

         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/events_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />

        </TableLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>